# canopy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Canopy.spec  Dockerfile  LICENSE  Makefile  README.md  README_20260624_045203_888.md  README_20260624_052322_978.md  README_20260624_054459_853.md  benchmark_results.csv  config.py  docker-compose.yml  optimize_result.json  pyproject.toml  requirements.txt  run_backtest.py  setup.cfg  test_exchange.py
canopy/: config.py  main.py
data/: backtest_momentum.md  canopy.db  canopy_live_drill.db  community_templates.json  marketplace.json  optimization_report.md  optimize_arbitrage.json  optimize_grid.json  optimize_momentum.json  optimize_trend.json  param_space_arbitrage.json  param_space_grid.json  param_space_momentum.json  param_space_trend.json  sim_24h_report.md  strategy_comparison.md
deploy/: Dockerfile  canopy.service  deploy.sh  docker-compose.prod.yml  nginx.conf  nginx.prod.conf  vps_deploy.sh
docker/: prometheus.yml
docs/: DOCKER_DEPLOY.md  GET_TESTNET_KEYS.md  INTRO_POST.md  Makefile  PUBLISH_GUIDE.md  RELEASE_CHECKLIST.md  api.rst  conf.py
exchange/: ccxt_adapter.py
scripts/: build_app.sh  build_desktop.py  download_historical.py  export_report.py  generate_report.py  go_live.py  install.sh  live_drill.py  optimize.py  optimize_all.py  report_template.html  run_live_drill_2h.sh  sandbox_verify.py  setup_launcher.sh  sim_30d.py  sim_run.py  strategy_comparison.py
temp/: backtest_momentum.py
tests/: test_backtest_runner.py  test_benchmark.py  test_benchmark_20260626_160102_771.py  (+3 more)
(+94 files in other folders)
